--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             <h2 class="name" id="name--0">1.Oyuncu</h2>
             <p class="score" id="score--0">0</p>
             <div class="current">
-                <p class="current-label">Zar</p>
+                <p class="current-label">Dice</p>
                 <p class="current-score" id="current--0">0</p>
             </div>
         </section>
         <section class="player player--1">
-            <h2 class="name" id="name--1">1.Oyuncu</h2>
+            <h2 class="name" id="name--1">2.Oyuncu</h2>
             <p class="score" id="score--1">0</p>
             <div class="current">
                 <p class="current-label">Zar</p>
